fix: replace deprecated APIs, fix SQL injection, enable ViewBinding, replace BetterListView with RecyclerView (#24 #25)